Update My Letters For You.html

--- a/My Letters For You.html
+++ b/My Letters For You.html
@@ -24,9 +24,9 @@
 	</center> </h3>
 </head>
 
-<body background="anWriter/img/b03811373008b2052.jpg">
+<body background="img/b03811373008b2052.jpg">
 	<center>
-	<img src="anWriter/img/Oa7h63kj67.jpg" 
+	<img src="img/Oa7h63kj67.jpg" 
 	height="360" width="360">
 	</center>
 </body>
@@ -103,7 +103,7 @@
 
 <body>
 	<center>
-	<img src="anWriter/img/a3519926485b5877.gif">
+	<img src="img/a3519926485b5877.gif">
 	</center>
 </body>
 
