Update My Letters For You.html

--- a/My Letters For You.html
+++ b/My Letters For You.html
@@ -12,13 +12,13 @@
 
 <body style="font-family: Papyrus"
 	<h1> <center> <b>
-		My Letters For You </font>
+		My Letters For You
 	</center> </h1> </b>
 </body>
 
 <body style="font-family: Papyrus"
 	<h3> <center> <b>
-	Happy 6th Monthsary</font>
+	Happy 6th Monthsary
 	</center> </h3> </b>
 </body>
 
@@ -32,7 +32,7 @@
 <p style="font-family: Papyrus"
 	<center> 
 	"Hello, my love."
-	</font> </center>
+	 </center>
 </p>
 
 
@@ -53,7 +53,7 @@
 	unfortunate.
 	Fortunately, you walked past by my life
 	and hoping for you to never leave.
-	</font> </center> 
+	</center> 
 </p>
 
 
@@ -71,7 +71,7 @@
 	blooming personality.
 	And it symbolises my growing beautiful
 	love for you.
-	</font> </center> 
+	</center> 
 </p>
 
 
@@ -84,7 +84,7 @@
 	But I am placing all my love through
 	this. Would you accept it?
 	I hope you will.
-	</font> </center>
+	</center>
 </p>
 
 <body>
@@ -97,7 +97,7 @@
 	<center> <b>
 	I love you.
 	Mahal kita
-	</font> </center> </b>
+	</center> </b>
 </p>
 
 <p style="font-family: Papyrus"
