Update My Letters For You.html

--- a/My Letters For You.html
+++ b/My Letters For You.html
@@ -43,11 +43,9 @@
 	Being in love with you is the best feeling I could ever feel. I hope I spend
 	all my tomorrows with you. Thank you for all the days that you made me feel
 	loved and appreciated. You are my motivation. The reason and my everything. 
-	the on person I would chose at any cost. Every time I see your face and
+	The only person I would chose at any cost. Every time I see your face and
 	hear you voice, I can't help but to fall in love more. You are more meaningful
 	than any other arts and songs. Simply a perfection that has ever existed. 
-	
-	I am out of the words to tell how grateful I am to have you.
 	</center> 
 </p>
 
@@ -71,11 +69,9 @@
 <p style="font-family: Papyrus"
 	<center> 
 	I am sorry if this is not that lengthy.
-	It's just for now. You'll have another
+	It's just for now. You'll have another one
 	tomorrow.
-	But I am placing all my love through
-	this. Would you accept it?
-	I hope you will.
+	But I hope you know how much i love you.
 	</center>
 </p>
 
@@ -101,7 +97,7 @@
 <p>
 	<center>
 	<font size="2" face="Georgia">
-	First Letter.
+	Second Letter.
 	</font> </center>
 </p>
 
