Update My Letters For You copy.html

--- a/My Letters For You copy.html
+++ b/My Letters For You copy.html
@@ -22,7 +22,7 @@
 	</center> </h3> </b>
 </body>
 
-<body background="img - Copy/Song recommendation.jfif">
+<body background="img - Copy/wallpaper.jfif">
 	<center>
 	<img src="img - Copy/Bad Thinking Diary Yuna Minji.jpg" alt="space"
 	height="360" width="360">
